--- a/GoshaDudarExampleShop/GoshaDudarExampleShop.csproj
+++ b/GoshaDudarExampleShop/GoshaDudarExampleShop.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\js" />
+    </ItemGroup>
+
 </Project>
